crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_`TypeVar`_parameter_…_(8424f2b8bc4351f9).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - `TypeVar` parameter must match variable name
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [mismatched-type-name]
4 | T = TypeVar("Q")
```

# Diagnostics

```
warning[mismatched-type-name]: The name passed to `TypeVar` must match the variable it is assigned to
 --> src/mdtest_snippet.py:4:13
  |
4 | T = TypeVar("Q")
  |             ^^^ Expected "T", got "Q"
  |

```
