crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_Fully_qualified_name…_(8f6f7c5aace58329).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: liskov.md - The Liskov Substitution Principle - Fully qualified names are used in diagnostics where appropriate
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## a.pyi

```
1 | class A:
2 |     def foo(self, x): ...
```

## b.pyi

```
1 | import a
2 | 
3 | class A(a.A):
4 |     def foo(self, y): ...  # error: [invalid-method-override]
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `foo`
 --> src/b.pyi:4:9
  |
4 |     def foo(self, y): ...  # error: [invalid-method-override]
  |         ^^^^^^^^^^^^ Definition is incompatible with `a.A.foo`
  |
 ::: src/a.pyi:2:9
  |
2 |     def foo(self, x): ...
  |         ------------ `a.A.foo` defined here
  |
info: This violates the Liskov Substitution Principle

```
